handle login and sign up

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,49 @@
-body {
+:root {
+  --main_color: #f05e1d;
+}
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  box-sizing: border-box;
+}
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(230, 230, 230);
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navbar {
+  height: 60px;
+  background-color: white;
+  line-height: 60px;
+}
+.navbar_wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 16px;
+}
+.navbar_list {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  list-style: none;
+  color: var(--main_color);
+}
+.navbar_list a {
+  color: var(--main_color);
+}
+.navbar_logo {
+  height: 40px;
+  width: auto;
+}
+.navbar_icon {
+  font-size: 24px;
+}
+.page_content {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
 }
