--- a/src/index.css
+++ b/src/index.css
@@ -64,6 +64,8 @@ button {
   height: 100%;
   display: flex;
   align-items: center;
+  outline: none;
+  width: fit-content;
 }
 img {
   width: 100%;
@@ -397,7 +399,7 @@ img {
 }
 .cards_container {
   display: grid;
-  grid-template-columns: repeat( auto-fit, minmax(150px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   gap: 12px;
 }
 .product {
@@ -407,6 +409,13 @@ img {
   display: flex;
   flex-direction: column;
   gap: 12px;
+}
+.product_img_container {
+  width: 100%;
+  background-color: white;
+  height: 140px;
+  display: flex;
+  align-items: center;
 }
 .product_img {
   width: 100px;
@@ -432,4 +441,9 @@ img {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+.cart_btns_container {
+  display: flex;
+  align-items: center;
+  gap: 16px;
 }
