--- a/src/index.css
+++ b/src/index.css
@@ -124,6 +124,7 @@ input {
 }
 .right_nav button {
   font-weight: 700;
+  color: var(--text-color);
   font-size: 14px;
   text-transform: capitalize;
   transition: all 0.3s ease-in;
@@ -144,7 +145,7 @@ input {
 .left_nav small:hover {
   color: var(--main_color);
 }
-.selected_category {
+.right_nav button.selected_category {
   color: var(--main_color);
 }
 .main_nav_item {
@@ -397,7 +398,7 @@ input {
 
 .cards_container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 12px;
 }
 .heart_icon {
@@ -416,7 +417,7 @@ input {
   gap: 12px;
 }
 .product_img_container {
-  width: 100%;
+  margin: 0 auto;
   background-color: white;
   height: 140px;
   display: flex;
@@ -441,11 +442,12 @@ input {
 
 .product_title,
 .product_description {
-  width: 100%;
-  margin: 0 auto;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  max-width: 100%;
+  height: 40px;
+  line-height: 1;
 }
 .cart_btns_container {
   display: flex;
