--- a/src/index.css
+++ b/src/index.css
@@ -71,6 +71,7 @@ a {
   outline: none;
   width: fit-content;
 } */
+
 img {
   width: 100%;
   height: 100%;
@@ -78,7 +79,6 @@ img {
 input {
   width: 100%;
 }
-
 
 .navbar {
   width: 100%;
@@ -93,7 +93,7 @@ input {
   height: 60px;
   border-bottom: 1px solid var(--border_color);
 }
-.top_navbar,
+
 .left_nav,
 .main_navbar {
   display: flex;
@@ -106,7 +106,7 @@ input {
 .navbar_icon {
   color: var(--icon_color);
   line-height: 1;
-  font-size: 16px;
+  font-size: 18px;
   transition: all 0.3s ease-in;
 }
 .left_nav_navbar_icon {
@@ -123,9 +123,9 @@ input {
   height: 100%;
 }
 .right_nav button {
-  font-weight: 700;
+  font-weight: 500;
   color: var(--text-color);
-  font-size: 14px;
+  font-size: 16px;
   text-transform: capitalize;
   transition: all 0.3s ease-in;
 }
@@ -200,6 +200,9 @@ input {
 .login_msg_error {
   color: red;
   font-size: 14px;
+}
+.ant-modal-footer .ant-btn-primary {
+  background-color: var(--main_color);
 }
 .dropdown_item {
   padding: 6px 12px;
@@ -276,7 +279,6 @@ input {
   width: 100%;
   height: auto;
 }
-
 
 @media only screen and (max-width: 768px) {
   .login-image,
