--- a/src/index.css
+++ b/src/index.css
@@ -80,12 +80,6 @@ input {
   width: 100%;
 }
 
-.navbar {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  /* box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px; */
-}
 .navbar_wrapper {
   padding: 0 16px;
 }
@@ -220,7 +214,7 @@ input {
 
 .full_page {
   width: 100%;
-  background-color: var(--background-color);
+  /* background-color: var(--background-color); */
   transition: all 0.3s ease-in;
 }
 .content {
@@ -382,21 +376,8 @@ input {
 }
 /* *************************** */
 
-.card {
-  padding: 12px;
-  margin: 20px auto;
-  border: 1px solid var(--main_color);
-  border-radius: 5px;
-  max-width: 120px;
-  text-align: center;
-}
-.card div {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 20px;
-  margin-top: 30px;
-}
+
+
 
 .cards_container {
   display: grid;
@@ -412,11 +393,13 @@ input {
 }
 .product {
   padding: 12px;
-  border: 1px solid var(--icon_color);
-  border-radius: 5px;
+  border: 1px solid var(--border_color);
+  background-color: var(--white-color);
+  border-radius: 15px;
   display: flex;
   flex-direction: column;
   gap: 12px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 .product_img_container {
   margin: 0 auto;
@@ -424,6 +407,9 @@ input {
   height: 140px;
   display: flex;
   align-items: center;
+  width: 100%;
+  border-radius: 15px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 .product_img {
   width: 100px;
