--- a/src/index.css
+++ b/src/index.css
@@ -71,7 +71,9 @@ a {
   outline: none;
   width: fit-content;
 } */
-
+button {
+  width: 100%;
+}
 img {
   width: 100%;
   height: 100%;
@@ -375,9 +377,6 @@ input {
   }
 }
 /* *************************** */
-
-
-
 
 .cards_container {
   display: grid;
