--- a/src/index.css
+++ b/src/index.css
@@ -71,9 +71,9 @@ a {
   outline: none;
   width: fit-content;
 } */
-button {
+/* button {
   width: 100%;
-}
+} */
 img {
   width: 100%;
   height: 100%;
