--- a/src/index.css
+++ b/src/index.css
@@ -26,8 +26,6 @@
   box-sizing: border-box;
 }
 body {
-  /* font-family: "Inconsolata", monospace; */
-  /* font-family: "Lumanosimo", cursive; */
   font-family: "Kanit", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -51,26 +49,7 @@ body {
   scrollbar-width: thin;
   scrollbar-color: #c9c9c9 #f1f1f1;
 }
-a {
-  color: unset;
-  text-decoration: none;
-  color: var(--text-color);
-  height: 100%;
-  display: flex;
-  align-items: center;
-  position: relative;
-}
-/* button {
-  border: none;
-  background-color: transparent;
-  cursor: pointer;
-  color: var(--text-color);
-  height: 100%;
-  display: flex;
-  align-items: center;
-  outline: none;
-  width: fit-content;
-} */
+
 .navbar button {
   width: 100%;
 }
@@ -82,96 +61,6 @@ input {
   width: 100%;
 }
 
-.navbar_wrapper {
-  padding: 0 16px;
-}
-.top_navbar {
-  height: 60px;
-  border-bottom: 1px solid var(--border_color);
-}
-
-.left_nav,
-.main_navbar {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.main_navbar {
-  height: 60px;
-}
-.navbar_icon {
-  color: var(--icon_color);
-  line-height: 1;
-  font-size: 18px;
-  transition: all 0.3s ease-in;
-}
-.left_nav_navbar_icon {
-  color: var(--main_color);
-}
-.navbar_icon:hover {
-  color: var(--main_color);
-}
-.left_nav,
-.right_nav {
-  display: flex;
-  align-items: center;
-  gap: 16px;
-  height: 100%;
-}
-.right_nav button {
-  font-weight: 500;
-  color: var(--text-color);
-  font-size: 16px;
-  text-transform: capitalize;
-  transition: all 0.3s ease-in;
-}
-.right_nav button:hover {
-  color: var(--main_color);
-}
-
-.phone_nav,
-.mail_nav {
-  display: flex;
-  align-items: center;
-  gap: 6px;
-}
-.left_nav small {
-  transition: all 0.3s ease-in;
-}
-.left_nav small:hover {
-  color: var(--main_color);
-}
-.right_nav button.selected_category {
-  color: var(--main_color);
-}
-.main_nav_item {
-  transition: all 0.3s ease-in;
-  position: relative;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  cursor: unset;
-}
-.main_nav_item_text::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 3px;
-  background-color: var(--main_color);
-  transition: all 0.3s ease-in;
-  transform: scaleX(0);
-  transform-origin: center;
-}
-
-.main_nav_item_text:hover {
-  color: var(--main_color);
-  cursor: pointer;
-}
-.main_nav_item_text:hover::after {
-  transform: scaleX(1);
-}
 .navbar_logo {
   font-family: "Permanent Marker", cursive;
   color: var(--main_color);
@@ -179,108 +68,10 @@ input {
   font-size: 30px;
   letter-spacing: 4px;
 }
-.patch {
-  background-color: var(--main_color);
-  color: var(--text-color);
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 10px;
-  position: absolute;
-  top: 6px;
-  right: -12px;
-}
+
 .login_msg_error {
   color: red;
   font-size: 14px;
-}
-.ant-modal-footer .ant-btn-primary {
-  background-color: var(--main_color);
-}
-.dropdown_item {
-  padding: 6px 12px;
-  font-weight: 600;
-  transition: all 0.3s ease-in;
-}
-.dropdown_item:hover {
-  color: var(--main_color) !important;
-}
-.modal_title {
-  text-align: center;
-  margin-top: 30px;
-  margin-bottom: 30px;
-}
-
-.full_page {
-  width: 100%;
-  /* background-color: var(--background-color); */
-  transition: all 0.3s ease-in;
-}
-.content {
-  min-height: calc(100vh - 120px);
-  padding: 0 16px;
-  color: var(--text-color);
-  padding: 16px;
-}
-
-.login-form-container,
-.signup-form-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  align-items: center;
-  width: 100%;
-  height: 100vh;
-  gap: 16px;
-  /* padding: 16px; */
-}
-.login-form,
-.signup-form {
-  padding: 50px;
-  /* border-radius: 10px;
-  box-shadow: inset 6px 6px 10px 0 rgba(0, 0, 0, 0.2), inset -6px -6px 10px 0 rgba(255, 255, 255, 0.5);
-  background: linear-gradient( -45deg, rgba(0, 0, 0, 0.2), rgba(255, 255, 255, 0.3) ); */
-}
-.login-form > * {
-  width: 100%;
-}
-.login-form button,
-.signup-form button {
-  width: 100%;
-}
-.login-image-container,
-.signup-image-container {
-  width: 100%;
-  margin: 0 auto;
-  /* background-image: linear-gradient(
-    -45deg,
-    var(--main_color),
-    rgb(245, 245, 245)
-  ); */
-  height: 100%;
-  padding: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.login-form-side h2,
-.signup-form-side h2 {
-  text-align: center;
-  color: var(--text-color);
-}
-.login-image,
-.signup-image {
-  width: 100%;
-  height: auto;
-}
-
-@media only screen and (max-width: 768px) {
-  .login-image,
-  .signup-image {
-    height: 30vh;
-  }
 }
 
 /* loading style */
@@ -292,88 +83,61 @@ input {
   align-items: center;
   justify-content: center;
 }
-.lds-roller {
-  display: inline-block;
+.loader {
+  width: 48px;
+  height: 48px;
+  margin: auto;
   position: relative;
-  width: 80px;
-  height: 80px;
 }
-.lds-roller div {
-  animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-  transform-origin: 40px 40px;
-}
-.lds-roller div:after {
-  content: " ";
-  display: block;
+.loader:before {
+  content: "";
+  width: 48px;
+  height: 5px;
+  background: #666666;
+  opacity: 0.25;
   position: absolute;
-  width: 7px;
-  height: 7px;
+  top: 60px;
+  left: 0;
   border-radius: 50%;
+  animation: shadow 0.5s linear infinite;
+}
+.loader:after {
+  content: "";
+  width: 100%;
+  height: 100%;
   background: var(--main_color);
-  margin: -4px 0 0 -4px;
+  animation: bxSpin 0.5s linear infinite;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 4px;
 }
-.lds-roller div:nth-child(1) {
-  animation-delay: -0.036s;
-}
-.lds-roller div:nth-child(1):after {
-  top: 63px;
-  left: 63px;
-}
-.lds-roller div:nth-child(2) {
-  animation-delay: -0.072s;
-}
-.lds-roller div:nth-child(2):after {
-  top: 68px;
-  left: 56px;
-}
-.lds-roller div:nth-child(3) {
-  animation-delay: -0.108s;
-}
-.lds-roller div:nth-child(3):after {
-  top: 71px;
-  left: 48px;
-}
-.lds-roller div:nth-child(4) {
-  animation-delay: -0.144s;
-}
-.lds-roller div:nth-child(4):after {
-  top: 72px;
-  left: 40px;
-}
-.lds-roller div:nth-child(5) {
-  animation-delay: -0.18s;
-}
-.lds-roller div:nth-child(5):after {
-  top: 71px;
-  left: 32px;
-}
-.lds-roller div:nth-child(6) {
-  animation-delay: -0.216s;
-}
-.lds-roller div:nth-child(6):after {
-  top: 68px;
-  left: 24px;
-}
-.lds-roller div:nth-child(7) {
-  animation-delay: -0.252s;
-}
-.lds-roller div:nth-child(7):after {
-  top: 63px;
-  left: 17px;
-}
-.lds-roller div:nth-child(8) {
-  animation-delay: -0.288s;
-}
-.lds-roller div:nth-child(8):after {
-  top: 56px;
-  left: 12px;
-}
-@keyframes lds-roller {
-  0% {
-    transform: rotate(0deg);
+@keyframes bxSpin {
+  17% {
+    border-bottom-right-radius: 3px;
+  }
+  25% {
+    transform: translateY(9px) rotate(22.5deg);
+  }
+  50% {
+    transform: translateY(18px) scale(1, 0.9) rotate(45deg);
+    border-bottom-right-radius: 40px;
+  }
+  75% {
+    transform: translateY(9px) rotate(67.5deg);
   }
   100% {
-    transform: rotate(360deg);
+    transform: translateY(0) rotate(90deg);
+  }
+}
+
+@keyframes shadow {
+  0%,
+  100% {
+    transform: scale(1, 1);
+  }
+  50% {
+    transform: scale(1.2, 1);
   }
 }
 /* *************************** */
