--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,7 @@ body {
   scrollbar-color: #c9c9c9 #f1f1f1;
 }
 
-.navbar button {
+.navbar_btn button {
   width: 100%;
 }
 img {
@@ -179,17 +179,7 @@ input {
   height: 100px;
   margin: 0 auto;
 }
-.product-page {
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
-  padding: 16px;
-}
-.product_page_img {
-  width: 200px;
-  height: 200px;
-  margin: 0 auto;
-}
+
 
 .product_title,
 .product_description {
@@ -197,14 +187,16 @@ input {
   overflow: hidden;
   text-overflow: ellipsis;
   max-width: 100%;
-  height: 40px;
-  line-height: 1;
+  height: 20px;
+  line-height: 20px;
+}
+.product_price {
+  font-size: 16px;
+  font-weight: 600;
 }
 .cart_btns_container {
   display: flex;
   align-items: center;
   gap: 16px;
 }
-.rating-stars {
-  display: flex;
-}
+
