--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 :root {
-  --main_color: #00b96b;
+  --main_color: #F97316;
   --border_color: #e4e4e4;
   --icon_color: #9ca4ab;
   --white-color: #ffffff;
@@ -12,7 +12,7 @@
   --box-shadow-color: rgba(0, 0, 0, 0.3);
 }
 .dark-mode {
-  --main_color: #00b96b;
+  --main_color: #F97316;
   --border_color: #8b8b8b;
   --icon_color: #9ca4ab;
   --white-color: #333333;
@@ -63,10 +63,7 @@ input {
 
 .navbar_logo {
   font-family: "Permanent Marker", cursive;
-  color: var(--main_color);
-  line-height: 1;
-  font-size: 30px;
-  letter-spacing: 4px;
+  /* color: var(--main_color); */
 }
 
 .login_msg_error {
@@ -144,7 +141,7 @@ input {
 
 .cards_container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
   gap: 12px;
 }
 .heart_icon {
@@ -156,14 +153,15 @@ input {
 }
 .product {
   padding: 12px;
-  border: 1px solid var(--border_color);
-  background-color: var(--white-color);
-  border-radius: 15px;
+  /* border: 1px solid var(--border_color); */
+  /* background-color: var(--white-color); */
+  /* border-radius: 15px; */
   display: flex;
   flex-direction: column;
   gap: 12px;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
 }
+
 .product_img_container {
   margin: 0 auto;
   background-color: white;
@@ -171,32 +169,9 @@ input {
   display: flex;
   align-items: center;
   width: 100%;
-  border-radius: 15px;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-}
-.product_img {
-  width: 100px;
-  height: 100px;
-  margin: 0 auto;
+  /* border-radius: 15px; */
+  /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
 }
 
 
-.product_title,
-.product_description {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  max-width: 100%;
-  height: 20px;
-  line-height: 20px;
-}
-.product_price {
-  font-size: 16px;
-  font-weight: 600;
-}
-.cart_btns_container {
-  display: flex;
-  align-items: center;
-  gap: 16px;
-}
 
